--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,3 @@
-annotated-types==0.7.0
-anyio==4.9.0
-beautifulsoup4==4.13.4
-certifi==2025.4.26
-charset-normalizer==3.4.2
-distro==1.9.0
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-idna==3.10
-iniconfig==2.1.0
-jiter==0.10.0
-openai==1.81.0
-packaging==25.0
-pluggy==1.6.0
-pydantic==2.11.4
-pydantic_core==2.33.2
-pytest==8.3.5
-requests==2.32.3
-sniffio==1.3.1
-soupsieve==2.7
-tqdm==4.67.1
-typing-inspection==0.4.1
-typing_extensions==4.13.2
-urllib3==2.4.0
+httpx
+openai
+pipreqs
